<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.example.othello.Activities.MainMenu.Option.OnePlayerOption">

    <ImageView
        android:id="@+id/oneplayeroption_brownbg"
        android:layout_width="wrap_content"
        android:layout_height="473dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/oneplayeroption_brownbg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/brown_menu" />

    <ImageView
        android:id="@+id/oneplayer_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/oneplayeroption_banner"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        app:layout_constraintBottom_toTopOf="@+id/oneplayeroption_brownbg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/oneplayer" />

    <LinearLayout
        android:id="@+id/oneplayer_option"
        android:layout_width="313dp"
        android:layout_height="236dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="76dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/oneplayeroption_brownbg"
        app:layout_constraintStart_toStartOf="@+id/oneplayeroption_brownbg"
        app:layout_constraintTop_toTopOf="@+id/oneplayeroption_brownbg">

        <EditText
            android:id="@+id/edtxtopname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:hint="@string/your_name"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:foregroundGravity="center"
            android:gravity="center">

            <RadioButton
                android:id="@+id/rbtn_easy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/easy"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/rbtn_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/normal"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="30sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/rbtn_difficulty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/difficult"
                android:textSize="30sp"
                android:textStyle="bold" />
        </RadioGroup>

    </LinearLayout>

    <Button
        android:id="@+id/btngo"
        android:layout_width="138dp"
        android:layout_height="65dp"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/go"
        android:onClick="play"
        app:layout_constraintBottom_toBottomOf="@+id/oneplayeroption_brownbg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/oneplayer_option"
        app:layout_constraintVertical_bias="0.0" />
</android.support.constraint.ConstraintLayout>