<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.example.othello.Activities.MainMenu.Option.TwoPlayersOption">

    <ImageView
        android:id="@+id/twoplayersoption_brownbg"
        android:layout_width="wrap_content"
        android:layout_height="473dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/twoplayersoption_brownbg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/brown_menu" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/twoplayersoption_banner"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/twoplayer" />

    <LinearLayout
        android:layout_width="326dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="72dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/twoplayersoption_brownbg">

        <EditText
            android:id="@+id/edtxt_opname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/vs"
            app:srcCompat="@drawable/vs" />

        <EditText
            android:id="@+id/edtxt_tpname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textAlignment="center" />

    </LinearLayout>

    <Button
        android:layout_width="138dp"
        android:layout_height="65dp"
        android:layout_marginBottom="76dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/go"
        android:onClick="play"
        app:layout_constraintBottom_toBottomOf="@+id/twoplayersoption_brownbg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
