<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.example.othello.Activities.Game.Game">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:background="@drawable/brown_pnl_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/info_panel"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:baselineAligned="false"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/score_panel"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/txtvopname"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/black_panel"
                android:gravity="center"
                android:padding="3dp"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/msg_player_one"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/PlayerOneName" />

            <TextView
                android:id="@+id/msg_player_one"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/black_panel"
                android:gravity="center"
                android:padding="3dp"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtvopname"
                tools:text="@string/messageForPlayerOne" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/score_panel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="@+id/info_panel"
            app:layout_constraintEnd_toStartOf="@+id/info_panel"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/info_panel">

            <ImageView
                android:id="@+id/black_bg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/black_bg"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/black_bg" />

            <TextView
                android:id="@+id/score_player_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@android:color/background_light"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="@+id/black_bg"
                app:layout_constraintEnd_toEndOf="@+id/black_bg"
                app:layout_constraintStart_toStartOf="@+id/black_bg"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/PlayerOneScore" tools:targetApi="jelly_bean"/>
        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>

    <TableLayout
        android:id="@+id/othello_board"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="3"
        android:background="@android:color/black"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TableLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:background="@drawable/brown_pnl_bg"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/ConstraintLayout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <ImageView
                android:id="@+id/white_bg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/white_bg"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/white_bg" />

            <TextView
                android:id="@+id/score_player_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="@+id/white_bg"
                app:layout_constraintEnd_toEndOf="@+id/white_bg"
                app:layout_constraintStart_toStartOf="@+id/white_bg"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/PlayerTwoScore" tools:targetApi="jelly_bean"/>
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/ConstraintLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/constraintLayout"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/txtvtpname"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/white_panel"
                android:gravity="center"
                android:padding="3dp"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/msg_player_two"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/PlayerTwoName" />

            <TextView
                android:id="@+id/msg_player_two"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/white_panel"
                android:gravity="center"
                android:padding="3dp"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@android:color/background_light"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtvtpname"
                tools:text="@string/messageForPlayerTwo" />
        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>

</LinearLayout>
